--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.12.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
