--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^0.40.4",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
